[package]
name = "gleam_finder"
version = "0.5.0-alpha"
license = "MIT"
description = "A very small crate you can use to get gleam.io links."
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[dependencies]
minreq = { version = "2.1.0", features = ["https"] }
serde = { version = "1.0", features = ["derive"], optional = true }
string-tools = "0.1.0"
serde_json = "1.0"

[features]
serde-support = ["serde"]